k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-gate-detector
spec:
  selector:
    app: open-gate-detector
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
